## Makefile for the gnulib-local directory of GNU gettext
## Copyright (C) 2006 Free Software Foundation, Inc.
##
## This program is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation; either version 2, or (at your option)
## any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with this program; if not, write to the Free Software Foundation,
## Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.

## Process this file with automake to produce Makefile.in.

# Generate this list with
# find . '(' -name CVS -o -name Makefile.am ')' -prune -o -type f '!' '(' -name '*.orig' -or -name '*~' ')' -printf '%P\n' | sort | tr '\012' @ | sed 's/@$/%/;s/@/ \\@/g' | tr @% '\012\012'
EXTRA_DIST = \
ChangeLog \
build-aux/moopp \
lib/3level.h \
lib/addext.c \
lib/alloca_.h \
lib/argmatch.h.diff \
lib/backupfile.c \
lib/backupfile.h \
lib/basename.c \
lib/basename.h \
lib/ChangeLog.0 \
lib/ChangeLog.1 \
lib/closeout.c \
lib/closeout.h \
lib/Combining.txt \
lib/error.h.diff \
lib/error-progname.c \
lib/error-progname.h \
lib/exitfail.h.diff \
lib/fd-ostream.oo.c \
lib/fd-ostream.oo.h \
lib/file-ostream.oo.c \
lib/file-ostream.oo.h \
lib/fnmatch.c.diff \
lib/fnmatch_loop.c.diff \
lib/fstrcmp.c \
lib/fstrcmp.h \
lib/gen-lbrkprop.c \
lib/getopt_.h.diff \
lib/gettext.h \
lib/glib_.h \
lib/glibconfig_.h \
lib/glib/ghash.c \
lib/glib/ghash_.h \
lib/glib/glist.c \
lib/glib/glist_.h \
lib/glib/gmessages.c \
lib/glib/gprimes.c \
lib/glib/gprimes_.h \
lib/glib/gstrfuncs.c \
lib/glib/gstrfuncs_.h \
lib/glib/gstring.c \
lib/glib/gstring_.h \
lib/glib/gtypes_.h \
lib/hash.c \
lib/hash.h \
lib/html-ostream.oo.c \
lib/html-ostream.oo.h \
lib/iconv-ostream.oo.c \
lib/iconv-ostream.oo.h \
lib/javacomp.c.diff \
lib/libxml/COPYING \
lib/libxml/DOCBparser.c \
lib/libxml/DOCBparser_.h \
lib/libxml/HTMLparser.c \
lib/libxml/HTMLparser_.h \
lib/libxml/HTMLtree.c \
lib/libxml/HTMLtree_.h \
lib/libxml/SAX.c \
lib/libxml/SAX2.c \
lib/libxml/SAX2_.h \
lib/libxml/SAX_.h \
lib/libxml/c14n.c \
lib/libxml/c14n_.h \
lib/libxml/catalog.c \
lib/libxml/catalog_.h \
lib/libxml/chvalid.c \
lib/libxml/chvalid_.h \
lib/libxml/debugXML.c \
lib/libxml/debugXML_.h \
lib/libxml/dict.c \
lib/libxml/dict_.h \
lib/libxml/elfgcchack.h \
lib/libxml/encoding.c \
lib/libxml/encoding_.h \
lib/libxml/entities.c \
lib/libxml/entities_.h \
lib/libxml/error.c \
lib/libxml/globals.c \
lib/libxml/globals_.h \
lib/libxml/hash.c \
lib/libxml/hash_.h \
lib/libxml/legacy.c \
lib/libxml/libxml.h \
lib/libxml/list.c \
lib/libxml/list_.h \
lib/libxml/nanoftp.c \
lib/libxml/nanoftp_.h \
lib/libxml/nanohttp.c \
lib/libxml/nanohttp_.h \
lib/libxml/parser.c \
lib/libxml/parser_.h \
lib/libxml/parserInternals.c \
lib/libxml/parserInternals_.h \
lib/libxml/pattern.c \
lib/libxml/pattern_.h \
lib/libxml/relaxng.c \
lib/libxml/relaxng_.h \
lib/libxml/schemasInternals_.h \
lib/libxml/schematron.c \
lib/libxml/schematron_.h \
lib/libxml/threads.c \
lib/libxml/threads_.h \
lib/libxml/tree.c \
lib/libxml/tree_.h \
lib/libxml/uri.c \
lib/libxml/uri_.h \
lib/libxml/valid.c \
lib/libxml/valid_.h \
lib/libxml/xinclude.c \
lib/libxml/xinclude_.h \
lib/libxml/xlink.c \
lib/libxml/xlink_.h \
lib/libxml/xmlIO.c \
lib/libxml/xmlIO_.h \
lib/libxml/xmlautomata_.h \
lib/libxml/xmlerror_.h \
lib/libxml/xmlexports_.h \
lib/libxml/xmlmemory.c \
lib/libxml/xmlmemory_.h \
lib/libxml/xmlmodule.c \
lib/libxml/xmlmodule_.h \
lib/libxml/xmlreader.c \
lib/libxml/xmlreader_.h \
lib/libxml/xmlregexp.c \
lib/libxml/xmlregexp_.h \
lib/libxml/xmlsave.c \
lib/libxml/xmlsave_.h \
lib/libxml/xmlschemas.c \
lib/libxml/xmlschemas_.h \
lib/libxml/xmlschemastypes.c \
lib/libxml/xmlschemastypes_.h \
lib/libxml/xmlstring.c \
lib/libxml/xmlstring_.h \
lib/libxml/xmlunicode.c \
lib/libxml/xmlunicode_.h \
lib/libxml/xmlversion_.h \
lib/libxml/xmlwriter.c \
lib/libxml/xmlwriter_.h \
lib/libxml/xpath.c \
lib/libxml/xpath_.h \
lib/libxml/xpathInternals_.h \
lib/libxml/xpointer.c \
lib/libxml/xpointer_.h \
lib/linebreak.c.diff \
lib/memory-ostream.oo.c \
lib/memory-ostream.oo.h \
lib/moo.h \
lib/obstack.h.diff \
lib/ostream.oo.c \
lib/ostream.oo.h \
lib/progname.h.diff \
lib/propername.c \
lib/propername.h \
lib/relocatable.c \
lib/relocatable.h \
lib/relocwrapper.c \
lib/strerror.c.diff \
lib/term-ostream.oo.c \
lib/term-ostream.oo.h \
lib/vasprintf.c \
lib/xalloc.h \
lib/xerror.c \
lib/xerror.h \
lib/xgetcwd.c \
lib/xgetcwd.h \
lib/xmalloc.c \
lib/xreadlink.c \
lib/xreadlink.h \
lib/xstrdup.c \
m4/alloca.m4 \
m4/backupfile.m4 \
m4/ChangeLog.0 \
m4/ChangeLog.1 \
m4/exitfail.m4.diff \
m4/gcj.m4 \
m4/hard-locale.m4.diff \
m4/libglib.m4 \
m4/libxml.m4 \
m4/java.m4 \
m4/quotearg.m4.diff \
m4/quote.m4.diff \
m4/relocatable.m4 \
m4/termcap.m4 \
m4/term-ostream.m4 \
m4/unionwait.m4 \
m4/vasprintf.m4 \
m4/xreadlink.m4 \
modules/backupfile \
modules/basename \
modules/closeout \
modules/error-progname \
modules/exitfail.diff \
modules/fd-ostream \
modules/file-ostream \
modules/fnmatch.diff \
modules/fstrcmp \
modules/gcj \
modules/gen-lbrkprop \
modules/gettext-runtime-misc \
modules/gettext-tools-misc \
modules/gettext-tools-libgettextpo-misc \
modules/hash \
modules/html-ostream \
modules/iconv-ostream \
modules/java \
modules/javacomp.diff \
modules/libglib \
modules/libxml \
modules/memory-ostream \
modules/moo \
modules/ostream \
modules/progreloc \
modules/propername \
modules/quotearg.diff \
modules/quote.diff \
modules/relocatable \
modules/relocwrapper \
modules/termcap \
modules/term-ostream \
modules/vasprintf.diff \
modules/wait-process.diff \
modules/xalloc \
modules/xalloc-die \
modules/xerror \
modules/xgetcwd \
modules/xreadlink
